# tinker-experiments

./: README.md  bench_common.py  bench_worker_v2.py  experiment_a_results.csv  experiment_b.py  experiment_b_results.csv  experiment_d.py  experiment_e.py  experiment_f.py  plot_results.py
load-test-730/: README.md  bench_common.py  bench_worker.py  experiment_a.py  experiment_b_results.csv  experiment_c.py  experiment_c_results.csv  experiment_d_results.csv  experiment_e_results.csv  experiment_f_results.csv  plot_all.py
tinker-billing-pkg/: pyproject.toml
tinker-billing-pkg/src/tinker_billing/: __init__.py  _cli.py  _estimator.py
tinker-billing-pr/: __main__.py.diff
tinker-billing-pr/src/tinker/cli/commands/: billing.py
tinker-billing-pr/tests/: test_cli_billing.py
