[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinker-billing"
version = "0.1.0"
description = "Cost estimation for the Thinking Machines Lab Tinker SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
cli = ["click>=8.0", "rich>=13.0"]

[project.scripts]
tinker-billing = "tinker_billing._cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tinker_billing"]
